[package]
name = "egg-mode-extras"
version = "0.3.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
description = "Rate-limited streams and other helpers for egg-mode"
homepage = "https://github.com/travisbrown/egg-mode-extras"
repository = "https://github.com/travisbrown/egg-mode-extras"
keywords = ["twitter"]
license = "MPL-2.0"
readme = "README.md"
edition = "2021"
exclude = [ ".github/*", "codecov.yml" ]

[dependencies]
chrono = "0.4"
displaydoc = "0.2"
egg-mode = "0.16"
futures = "0.3"
hyper = "0.14"
lazy_static = "1.4"
log = "0.4"
regex = "1.4"
reqwest = "0.11"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1"
toml = "0.5"
